--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -2,5 +2,8 @@
 
 body  {
   background-color: #fff;
+  color: #444;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 200;
   overflow-x: hidden;
 }
