--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -13,7 +13,12 @@
 		<script>
 			var monotype = new Monotype('#monotype');
 
-			monotype.init()
+			monotype
+				.typeAll()
+				.then(() => {
+					monotype.pause()
+					monotype.wait()
+				})
 		</script>
 	</body>
 </html>
